[gd_scene load_steps=16 format=3 uid="uid://baa3n22xm8384"]

[ext_resource type="Script" path="res://Nodes/Player/player.gd" id="1_arw0j"]
[ext_resource type="Texture2D" uid="uid://b3bqcbb0ejeaw" path="res://Sprites/PlayerAngelSpriteSheet.png" id="1_gi612"]
[ext_resource type="Script" path="res://Scripts/hurtbox.gd" id="3_da6bw"]
[ext_resource type="Script" path="res://Scripts/ClampPosition.gd" id="4_l61g1"]
[ext_resource type="Script" path="res://Scripts/hurt.gd" id="5_7mre1"]
[ext_resource type="Script" path="res://Nodes/Player/ItemDetector.gd" id="6_57dqy"]
[ext_resource type="Script" path="res://Scripts/health.gd" id="6_pksvg"]
[ext_resource type="Script" path="res://Scripts/Flash.gd" id="7_ik0k8"]
[ext_resource type="Script" path="res://Scripts/shakeEffect.gd" id="8_xxn2b"]
[ext_resource type="Script" path="res://Scripts/hitbox.gd" id="9_vf0up"]

[sub_resource type="Animation" id="Animation_tefjr"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_20l3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0a5g8"]
_data = {
"Idle": SubResource("Animation_tefjr"),
"RESET": SubResource("Animation_20l3d")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ypvbp"]
radius = 14.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bkwv2"]
radius = 14.0
height = 40.0

[node name="Player" type="CharacterBody2D"]
z_index = 3
script = ExtResource("1_arw0j")

[node name="PositionClamp" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("4_l61g1")
player = NodePath("..")
horizontalClamp = true
verticalClamp = true

[node name="Body" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite2D" parent="Body"]
texture_filter = 1
texture = ExtResource("1_gi612")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/PlayerSprite"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_0a5g8")
}
autoplay = "Idle"

[node name="BoostTimer" type="Timer" parent="Body"]
one_shot = true

[node name="ShootingPosition" type="Marker2D" parent="Body"]
position = Vector2(18, 4)

[node name="ShootDelay" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("9_vf0up")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ypvbp")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_mask = 0
script = ExtResource("3_da6bw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ypvbp")

[node name="ItemDetector" type="Area2D" parent="."]
z_index = 2
collision_layer = 4
collision_mask = 0
script = ExtResource("6_57dqy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetector"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_bkwv2")

[node name="hurt" type="Node" parent="." node_paths=PackedStringArray("health", "hurtbox")]
script = ExtResource("5_7mre1")
health = NodePath("../Health")
hurtbox = NodePath("../Hurtbox")

[node name="Health" type="Node" parent="."]
script = ExtResource("6_pksvg")
health = 100

[node name="Flash" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("7_ik0k8")
sprite = NodePath("../Body/PlayerSprite")

[node name="Shake" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("8_xxn2b")
node = NodePath("../Body/PlayerSprite")

[connection signal="timeout" from="Body/BoostTimer" to="." method="_on_boost_timer_timeout"]
